--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,7 +46,7 @@
   </head>
   <body class='flex-column'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style='width: 100%; height: auto; padding-bottom: 2rem;'></div>
+    <div id="root"></div>
 
     <!--
       This HTML file is a template.
