--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,7 +44,7 @@
     -->
     <title>My Video Tagger</title>
   </head>
-  <body class='flex-column'>
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
