got inputs to save to redux form and started page 2 of add_stool form

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
 
     <meta
       name="description"
-      content="This free video tag tool can help you use the tags from popular videos to make your own stand out.  With MyVideoTagger, you can create lists of tags by looking at tags of popular videos.  Sign in with Google to save your tags and reuse them later!"
+      content="Log you logs and stay regular.  Stool Story is a free service that helps you keep track of your business for any reason you may have in a fun an easy way.  Sign in with Google today!"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
