--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
 
     <meta
       name="description"
-      content="Log you logs and stay regular.  Stool Story is a free service that helps you keep track of your business for any reason you may have in a fun an easy way.  Sign in with Google today!"
+      content="Log your logs and stay regular.  A free service that helps you keep track of your business for any reason you may have in a fun an easy way.  Sign in with Google today!"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
